out.txt
version='0.1.5'

running install
running bdist_egg
running egg_info
writing manifest file 'plasticnet.egg-info/SOURCES.txt'
running install_lib
running build_py
running build_ext
gcc -Wno-unused-result -Wsign-compare -Wunreachable-code -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -I/Users/bblais/opt/anaconda3/envs/py3/include -arch x86_64 -I/Users/bblais/opt/anaconda3/envs/py3/include -arch x86_64 -march=core2 -mtune=haswell -mssse3 -ftree-vectorize -fPIC -fPIE -fstack-protector-strong -O2 -pipe -isystem /Users/bblais/opt/anaconda3/envs/py3/include -I/usr/local/opt/llvm/include -I/Users/bblais/opt/anaconda3/envs/py3/lib/python3.8/site-packages/numpy/core/include -I. -Iplasticnet/ -I/Users/bblais/opt/anaconda3/envs/py3/include/python3.8 -c plasticnet/neurons/pattern_neuron.c -o build/temp.macosx-10.9-x86_64-3.8/plasticnet/neurons/pattern_neuron.o -O3
plasticnet/neurons/pattern_neuron.c:1:2: error: Do not use this file, it is the result of a failed Cython compilation.
#error Do not use this file, it is the result of a failed Cython compilation.
 ^
1 error generated.
/Users/bblais/opt/anaconda3/envs/py3/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
/Users/bblais/opt/anaconda3/envs/py3/lib/python3.8/site-packages/setuptools/command/easy_install.py:156: EasyInstallDeprecationWarning: easy_install command is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
/Users/bblais/opt/anaconda3/envs/py3/lib/python3.8/site-packages/Cython/Compiler/Main.py:369: FutureWarning: Cython directive 'language_level' not set, using 2 for now (Py2). This will change in a later release! File: /Users/bblais/Documents/Research Notes/PlasticNet/plasticnet/neurons/pattern_neuron.pyx
  tree = Parsing.p_module(s, pxd, full_module_name)

Error compiling Cython file:
------------------------------------------------------------
...
    cdef int images_loaded
    cdef public int p,r,c
    cdef public int pa,ra,ca
    cdef public int use_other_channel
    cdef natural_images other_channel
    cdef float μc,μr
              ^
------------------------------------------------------------

plasticnet/neurons/pattern_neuron.pyx:285:15: Unrecognized character
error: command '/usr/bin/gcc' failed with exit code 1
python setup.py install
